--- a/index.html
+++ b/index.html
@@ -2542,6 +2542,14 @@ input[type=number]::-webkit-outer-spin-button {
         </div>
     </div>
     <div id="etaList"></div>
+	</div> <div id="detailOverlay">
+    <div class="detail-header-sticky">
+        <div style="display:flex; justify-content:space-between; align-items:center;">
+            <h2 id="detailTitle" style="margin:0; font-size: 1.2em;">記錄詳情</h2>
+            <button onclick="closeDetail()" style="padding:8px 16px; background:#333; color:white; border:none; border-radius:8px; cursor:pointer;">返回</button>
+        </div>
+    </div>
+    <div id="detailList"></div>
 </div>
 
 
