--- a/index.html
+++ b/index.html
@@ -2493,6 +2493,16 @@ input[type=number]::-webkit-outer-spin-button {
 .entrance-anim .eta-platform-group:nth-child(n+4) { animation-delay: 0.14s; }
 
     </style>
+	
+<link rel="manifest" href="manifest.json">
+
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="default">
+<meta name="apple-mobile-web-app-title" content="LRSpotter">
+<link rel="apple-touch-icon" href="icon-192.png">
+
+<meta name="theme-color" content="#007aff">	
+	
 </head>
 
 <body>
@@ -2705,6 +2715,13 @@ input[type=number]::-webkit-outer-spin-button {
     <div id="detailList"></div>
 </div>
 
+if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+        navigator.serviceWorker.register('./sw.js')
+            .then(reg => console.log('PWA Service Worker 已註冊'))
+            .catch(err => console.log('Service Worker 註冊失敗', err));
+    });
+}
 
 <script>
 window.cachedUserCoords = null;
