--- a/index.html
+++ b/index.html
@@ -2501,7 +2501,8 @@ input[type=number]::-webkit-outer-spin-button {
 <meta name="apple-mobile-web-app-title" content="LRSpotter">
 <link rel="apple-touch-icon" href="icon-192.png">
 
-<meta name="theme-color" content="#007aff">	
+<meta name="theme-color" content="#ffffff">	
+<meta name="apple-mobile-web-app-status-bar-style" content="default">
 	
 </head>
 
